HighContrast: Fix frame styling

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1857,7 +1857,7 @@ levelbar {
 /**********
  * Frames *
  **********/
-frame,
+frame border,
 .frame {
   border: 1px solid $borders_color;
   &.flat { border-style: none; }
