--- a/gtk/theme/HighContrast/gtk.css
+++ b/gtk/theme/HighContrast/gtk.css
@@ -2029,17 +2029,17 @@ spinbutton selection:focus, modelbutton.flat:hover, modelbutton.flat:selected,
 /**********
  * Frames *
  **********/
-frame,
+frame border,
 .frame {
   border: 1px solid gray;
   padding: 0; }
-  frame.flat,
+  frame border.flat,
   .frame.flat {
     border-style: none; }
-  frame:backdrop,
+  frame border:backdrop,
   .frame:backdrop {
     border-color: #8d8d8d; }
-  frame.action-bar,
+  frame border.action-bar,
   .frame.action-bar {
     padding: 6px;
     border-width: 1px 0 0; }
